# neuwillow

./: .CMakeLists.txt.swp  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.unsure  CODE_OF_CONDUCT.md  CONFIGURATION.md  NeuWillow.sln  OpenNeuro.sln  README.md  WORKFLOW.md  helloworld.txt  singleNeuron.ini  update_namespaces.sh
NeuWillow.Anatomy.Brain.Neurons/: NeuWillow.Anatomy.Brain.Neurons.csproj
NeuWillow.Common/: Extensions.cs  SyntheticTimer.cs
NeuWillow.Console/: NeuWillow.Console.csproj  Program.cs
NeuWillow.Domain/Axons/: Axon.cs
NeuWillow.Domain/CentralNervousSystem/Neurons/: NeuronBuilder.cs  NeuronConstants.cs  NeuronFatigueCalculator.cs
NeuWillow.Domain/Ions/: VoltageGatedCalciumChannel.cs
NeuWillow.Domain/Neurons/: CellMembrane.cs  SynapticClieft.cs
NeuWillow.Domain/Neurotransmitters/: Neurotransmitter.cs  SynapticVesicles.cs
NeuWillow.Domain/Proteins/: Synapsin.cs
NeuWillow.LimbicSystem/: LimbicSystem.md  SeptalArea.cs
NeuWillow.LimbicSystem/Amygdala/Nuclei/: AmygdaloidNuclei.cs  BasolateralNuclei.cs  CentralNuclei.cs  CorticalNuclei.cs  ExtendedAmygdalaNuclei.cs
NeuWillow.LimbicSystem/BasalGanglia/: BasalGanglia.cs
NeuWillow.LimbicSystem/BasalGanglia/DorsalStriatum/: CaudateNucleus.cs  DorsalStriatum.cs  Putamen.Readme.txt  Putamen.cs
NeuWillow.LimbicSystem/BasalGanglia/Striatum/: Striatum.cs  SubstantiaNigra.cs  SubthalamicNucleus.cs
NeuWillow.LimbicSystem/BasalGanglia/VentralStriatum/: NucleusAccumbens.cs  OlfactoryTubercle.cs  VentralStriatum.cs
NeuWillow.LimbicSystem/Diencephalon/: Diencephalon.cs  Diencephalon.md
NeuWillow.LimbicSystem/Diencephalon/Hypothalamus/: Hyoithalamus.md  Hypothalamus.cs  LateralHypothalamicNucleus.cs
NeuWillow.LimbicSystem/Diencephalon/Thalamus/: DorsomedialNucleus.cs  Thalamus.cs
NeuWillow.LimbicSystem/LimbicCortex/: CingulateGyrus.cs  LimbicCortex.cs  ParahippocampalGyrus.cs
NeuWillow.Neurons/: NeuWillow.Neurons.csproj
NeuWillow.Neurons/Axons/: Axon.cs  AxonHillock.cs
NeuWillow.Neurons/Dendrites/: Dendrite.cs  DendriteReceptorTypes.cs
NeuWillow.Neurons/Dendrites/DendriteIonChannels/: IDendriteIonChannel.cs  PotassiumDendriteIonChannel.cs  SodiumDendriteIonChannel.cs
NeuWillow.Neurons/Dendrites/DendriteReceptors/: GabaDendriteReceptor.cs  GlutamateDendriteReceptor.cs  IDendriteReceptor.cs
NeuWillow.Neurons/Dendrites/DendriticSpines/: DendriteSpineHead.cs  DendriteSpineNeck.cs  (+2 more)
NeuWillow.Neurons/NeuronTypes/: BipolarNeuron.cs  MultipolarNeuron.cs  UnipolarNeuron.cs
NeuWillow.Neurons/Neurotransmitters/: Neurotransmitter.cs
NeuWillow.Neurons/Proteins/: Protein.cs  Synapsin.cs
NeuWillow.Neurons/Synapses/: Synapse.cs  SynapticVesicle.cs
NeuWillow.Tests/: DendriteTests.cs  NeuWillow.Tests.csproj  SynapseTests.cs
OpenNeuro.Domain/Axons/: AxonTerminal.cs
OpenNeuro.Domain/Ions/: Calcium.cs  VoltageGatedIonChannel.cs
OpenNeuro.Domain/Neurotransmitters/: SynapticVesicles.cs
OpenNeuro.Domain/Proteins/: Protein.cs
config/: SingleNeuron.toml  preSynaptic.json
docs/: BUILD.md  Reference Materials.txt
ext/: CMakeLists.txt
ext/testing/googletest/TestRunner/: CMakeLists.txt  TestRunner.cpp  TestRunner.hpp
include/: ActionPotential.hpp  Axon.hpp  AxonHillock.hpp  AxonTerminal.hpp  ChemicalSynapse.hpp  Configuration.hpp  Dendrite.hpp  DendriteReceptor.hpp  DendriticReceptor.hpp  DendriticSomaticCalculator.hpp  ISubject.hpp  Internode.hpp  IonChannel.hpp  Logger.hpp  MyelinSheath.hpp  Neuron.hpp  NeuronComponents.hpp  Neurotransmitter.hpp  NeurotransmitterReceivedEvent.hpp  ObjectCache.hpp  PreSynapticNeuron.hpp  PreSynapticVesicle.hpp  RanvierNode.hpp  Simulation.hpp  SimulationParameters.hpp  SimulationSettingsLoader.hpp  SimulationStarter.hpp  Soma.hpp  Synapse.hpp  UniqueIdGenerator.hpp
include/Axons/: Axon.hpp  AxonHillock.hpp  AxonTerminal.hpp  PreSynapticVesicle.hpp
include/Dendrites/: Dendrite.hpp  DendriteModel.hpp  DendriteReceptor.hpp
include/Events/: NeurotransmitterReceivedEvent.hpp
include/Myelin/: Internode.hpp  MyelinSheath.hpp  RanvierNode.hpp
include/Myelination/: MyelinSheath.hpp  MyelinationTypes.hpp
include/Neurons/: Neuron.hpp  NeuronComponents.hpp  Soma.hpp
include/Neurotransmitters/: NeurotransmitterTypes.hpp
include/Simulations/: NeuronConfig.ini  Simulation.hpp
src/: .CMakeLists.txt.swp  ActionPotential.cpp  ActionPotential.hpp  Axon.cpp  Axon.hpp  AxonHillock.cpp  AxonHillock.hpp  AxonStructure.cpp  AxonTerminal.cpp  AxonTerminal.hpp  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CTestTestfile.cmake  ChemicalSynapse.cpp  ChemicalSynapse.hpp  Configuration.cpp  Configuration.hpp  DartConfiguration.tcl  Dendrite.cpp  Dendrite.hpp  DendriteFactory.cpp  DendriteModel.hpp  DendriteReceptor.cpp  DendriteReceptor.hpp  DendriteSubject.hpp  DendriticReceptor.cpp  DendriticSomaticCalculator.cpp  ISubject.hpp  InterNode.hpp  IonChannel.cpp  IonChannel.hpp  LIMITATIONS.md  Logger.cpp  Logger.hpp  Makefile  MyelinSheath.cpp  MyelinSheath.hpp  MyelinationTypes.hpp  NeuWillow  (+32 more)
src/Axons/: AxonHillock.cpp  AxonStructure.cpp  AxonTerminal.cpp  PreSynapticVesicle.cpp
src/Dendrites/: Dendrite.cpp  DendriteReceptor.cpp
src/Events/: NeurotransmitterEvent.cpp
src/Myelination/: Internode.cpp  MyelinSheath.cpp  RanvierNode.cpp
src/NeuWillow.dSYM/Contents/: Info.plist
src/NeuWillow.dSYM/Contents/Resources/DWARF/: NeuWillow
src/Neurotransmitters/: Neurotransmitter.cpp
src/Simulation.dSYM/Contents/Resources/DWARF/: Simulation
src/config/: configuration.cpp
src/logging/: logger.cpp
src/markdown/: BACKGROUND.md  BUILD.md  WORKFLOW.md
src/neuron/axon/myelination/: myelin_sheath.cpp
src/neuron/dendrite/: dendrite_structure.cpp
src/neuron/synapse/: chemical_synapse.cpp  neurotransmitter.cpp
src/simulator.dSYM/Contents/Resources/DWARF/: simulator
test/: CMakeLists.txt  NeuWillowTest.cpp  NeuWillowTest.hpp
test/test/: CMakeLists.txt
test/testrunner/NeuWillowTestingExe/: CMakeLists.txt
test/testrunner/NeuWillowTestingExe/NeuWillowTestingLib/: CMakeLists.txt  NeuWillowTestLib.cpp  NeuWillowTestLib.hpp
tests/: CMakeLists.txt
(+117 files in other folders)
